--- a/web/manifest.json
+++ b/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "Printing service app MIftahPrint",
+    "description": "A printing service app",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
